--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
         </h2>
       </section>
     </main>
+    <section class="features">
+      <div>
+        <img src="./images/music-icon.png" alt="phone" />
+        <h3>Millions of Songs</h3>
+        <p>There are millions of songs on Spotify</p>
+      </div>
+      <div>
+        <img src="./images/high-quality-icon.png" alt="sound" />
+        <h3>HD Music</h3>
+        <p>Listen to music as if you were listening live</p>
+      </div>
+      <div>
+        <img src="./images/devices-icon.png" alt="computer" />
+        <h3>Stream Everywhere</h3>
+        <p>Stream music on your smartphone, tablet or computer</p>
+      </div>
+    </section>
 
     What’s on Spotify? Millions of Songs There are millions of songs on Spotify
     HD Music Listen to music as if you were listening live Stream Everywhere
