--- a/index.html
+++ b/index.html
@@ -30,28 +30,58 @@
     </main>
     <section class="features">
       <div>
-        <img src="./images/music-icon.png" alt="phone" />
-        <h3>Millions of Songs</h3>
-        <p>There are millions of songs on Spotify</p>
+        <h3>What's on Spotify?</h3>
       </div>
-      <div>
-        <img src="./images/high-quality-icon.png" alt="sound" />
-        <h3>HD Music</h3>
-        <p>Listen to music as if you were listening live</p>
-      </div>
-      <div>
-        <img src="./images/devices-icon.png" alt="computer" />
-        <h3>Stream Everywhere</h3>
-        <p>Stream music on your smartphone, tablet or computer</p>
+
+      <div class="features-card">
+        <div>
+          <img src="./images/music-icon.png" alt="phone" />
+          <h3>Millions of Songs</h3>
+          <p>There are millions of songs on Spotify</p>
+        </div>
+
+        <div>
+          <img src="./images/high-quality-icon.png" alt="sound" />
+          <h3>HD Music</h3>
+          <p>Listen to music as if you were listening live</p>
+        </div>
+
+        <div>
+          <img src="./images/devices-icon.png" alt="computer" />
+          <h3>Stream Everywhere</h3>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </div>
       </div>
     </section>
 
-    What’s on Spotify? Millions of Songs There are millions of songs on Spotify
-    HD Music Listen to music as if you were listening live Stream Everywhere
-    Stream music on your smartphone, tablet or computer It’s as yeezy as Kanye
-    West. Search Know what you want to listen to? Just search and hit play.
-    Browse Check out the latest charts, brand new releases and great playlists
-    for right now. Discover Enjoy new music every Monday with your own personal
-    playlist. Or sit back and enjoy Radio.
+    <footer>
+      <div class="footer-text">
+        <h3>It’s as yeezy as Kanye West.</h3>
+        <div>
+          <strong>Search</strong>
+          <p>Know what you want to listen to? Just search and hit play.</p>
+        </div>
+        <div>
+          <strong>Browse</strong>
+          <p>
+            Check out the latest charts, brand new releases and great playlists
+            for right now.
+          </p>
+        </div>
+        <div>
+          <strong>Discover</strong>
+          <p>
+            Enjoy new music every Monday with your own personal playlist. Or sit
+            back and enjoy Radio.
+          </p>
+        </div>
+      </div>
+      <img
+        class="white-icon"
+        src="./images/spotify-icon-white.png"
+        alt="icon-white"
+      />
+      <img class="app" src="./images/spotify-app.jpg" alt="icon-green" />
+    </footer>
   </body>
 </html>
